Fixed link visibility and reply button borders

--- a/client/main.css
+++ b/client/main.css
@@ -16,6 +16,11 @@ body {
     overflow: hidden;
 }
 
+#posts-graph {
+    width: 100%;
+    height: 100%;
+}
+
 .post-button-box {
     position: fixed;
     right: 25px;
@@ -222,15 +227,12 @@ body {
 
 .titleInput {
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     width: 100%;
     border: 1px solid #999;
     border-right: none;
     border-radius: 8px 0px 0px 0px;
     padding-left: 10px;
     padding-right: 10px;
-
     background-color: #eaeaea;
     font-weight: bold;
 }
@@ -245,7 +247,7 @@ body {
 
 .contentInput {
     display: block;
-    overflow: hidden;
+    overflow: auto;
     height: 100%;
     margin: 0px;
     border: 1px solid #999;
@@ -254,12 +256,15 @@ body {
     padding: 6px;
     word-wrap: break-word;
     background-color: #fff;
+    resize: none;
 }
 
 .replyFooter button {
     flex-grow: 1;
     background-color: #fff;
     background-image: linear-gradient(#fcfcfc, #ddd);
+    border: 1px solid #999;
+    border-radius: 0px 0px 8px 8px;
     cursor: pointer;
 }
 
